--- a/front/src/app/login/login.component.html
+++ b/front/src/app/login/login.component.html
@@ -1,9 +1,9 @@
-<form [formGroup]="loginForm" >
+<form [formGroup]="loginForm" (ngSubmit)="submitForm()">
     <mat-form-field class="form-input">
-      <mat-label>Username</mat-label>
-      <input matInput placeholder="Username" formControlName="username" />
-      <mat-error *ngIf="username.invalid">
-        Please enter a valid username</mat-error
+      <mat-label>Email</mat-label>
+      <input matInput placeholder="Email" formControlName="email" />
+      <mat-error *ngIf="email.invalid">
+        Please enter a valid email</mat-error
       >
     </mat-form-field>
     <mat-form-field class="form-input">
