--- a/front/src/app/welcome/welcome.component.html
+++ b/front/src/app/welcome/welcome.component.html
@@ -3,6 +3,7 @@
 <h1><span>Invest Securely,<br> Help Businesses Grow</span></h1>
 <section class="divider">
 <h3>In Deventure we help those who need a small loan for their business while <br>getting you a safe and profitable investment with up to 5% return.</h3>
-<button mat-flat-button color="primary" routerLink="projects">Invest now!</button>
+<button mat-flat-button color="primary" routerLink="projects" *ngIf="isLogged">Invest now!</button>
+<button mat-flat-button color="primary" (click)="openLoginModal()" *ngIf="!isLogged">Invest now!</button>
 </section>
 </div>
